--- a/app/src/main/res/layout/activity_fc_identification.xml
+++ b/app/src/main/res/layout/activity_fc_identification.xml
@@ -147,41 +147,6 @@
                 </androidx.cardview.widget.CardView>
 
 
-                <!-- f1103  Spinner   -->
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/fldGrpCVf1103"
-                    style="@style/cardView">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/bottom"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            style="@style/quesNum"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:text="@string/Q_f1103" />
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:text="@string/f1103" />
-
-                        <androidx.appcompat.widget.AppCompatSpinner
-                            android:id="@+id/f1103"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="2"
-                            android:hint="@string/f1103" />
-
-                    </LinearLayout>
-
-                </androidx.cardview.widget.CardView>
-
-
                 <!-- F1104  Input   -->
                 <androidx.cardview.widget.CardView
                     android:id="@+id/fldGrpCVa101"
@@ -217,42 +182,39 @@
                 </androidx.cardview.widget.CardView>
 
 
-                <!-- f1105  Input   -->
+                <!-- f1103  Spinner   -->
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/fldGrpCVf1105"
-                    style="@style/cardView">
+                    android:id="@+id/fldGrpCVf1103"
+                    style="@style/cardView"
+                    android:visibility="@{f110202.checked ? View.VISIBLE : View.GONE}">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:background="@drawable/bottom"
+                        android:orientation="horizontal">
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/bottom"
-                            android:orientation="horizontal">
+                        <TextView
+                            style="@style/quesNum"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:text="@string/Q_f1103" />
 
-                            <TextView
-                                style="@style/quesNum"
-                                android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                android:text="@string/Q_f1105" />
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:text="@string/f1103" />
 
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:text="@string/f1105" />
+                        <androidx.appcompat.widget.AppCompatSpinner
+                            android:id="@+id/f1103"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="2"
+                            android:hint="@string/f1103" />
 
-                        </LinearLayout>
-
-                        <EditText
-                            android:id="@+id/f1105"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789,. "
-                            android:hint="@string/f1105" />
                     </LinearLayout>
+
                 </androidx.cardview.widget.CardView>
 
 
