--- a/app/src/main/res/layout/activity_section_f1_s1.xml
+++ b/app/src/main/res/layout/activity_section_f1_s1.xml
@@ -135,6 +135,45 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>-->
 
+                <!-- f1105  Input   -->
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/fldGrpCVf1105"
+                    style="@style/cardView">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/bottom"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                style="@style/quesNum"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:text="@string/Q_f1105" />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:text="@string/f1105" />
+
+                        </LinearLayout>
+
+                        <EditText
+                            android:id="@+id/f1105"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789,. "
+                            android:hint="@string/f1105"
+                            android:text="@={form.f1105}" />
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
                 <!-- f1106  Input   -->
                 <androidx.cardview.widget.CardView
                     android:id="@+id/fldGrpCVf1106"
