--- a/app/src/main/res/layout/activity_section_f3_s6.xml
+++ b/app/src/main/res/layout/activity_section_f3_s6.xml
@@ -291,7 +291,9 @@
                 <!-- f3605  CheckBox   -->
                 <androidx.cardview.widget.CardView
                     android:id="@+id/fldGrpCVf3605"
-                    style="@style/cardView">
+                    style="@style/cardView"
+                    android:visibility="@{form.f3601.equals(`2`) ? View.VISIBLE : View.GONE}">
+
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -404,7 +406,8 @@
                 <!-- f3606  Input-Numeric   -->
                 <androidx.cardview.widget.CardView
                     android:id="@+id/fldGrpCVf3606"
-                    style="@style/cardView">
+                    style="@style/cardView"
+                    android:visibility="@{form.f3601.equals(`2`) ? View.VISIBLE : View.GONE}">
 
                     <LinearLayout
                         android:layout_width="match_parent"
