--- a/app/src/main/res/layout/activity_section_f1_s1.xml
+++ b/app/src/main/res/layout/activity_section_f1_s1.xml
@@ -450,7 +450,7 @@
                             android:id="@+id/f1112"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789,. "
+                            android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz "
                             android:hint="@string/f1112"
                             android:text="@={form.f1112}" />
                     </LinearLayout>
