--- a/app/src/main/res/layout/activity_discform.xml
+++ b/app/src/main/res/layout/activity_discform.xml
@@ -59,6 +59,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:visibility="gone"
                         android:id="@+id/villageCode"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -115,7 +116,7 @@
                     android:padding="8dp" />
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rvHouseholds"
+                    android:id="@+id/rvChilds"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="56dp"
