--- a/app/src/main/res/layout/enmwra_row.xml
+++ b/app/src/main/res/layout/enmwra_row.xml
@@ -56,7 +56,7 @@
                     android:padding="@dimen/_2sdp">
 
                     <RelativeLayout
-                        android:layout_width="@dimen/_65sdp"
+                        android:layout_width="@dimen/_80sdp"
                         android:layout_height="match_parent">
 
                         <ImageView
@@ -78,7 +78,7 @@
                             android:layout_marginBottom="5dp"
                             android:padding="@dimen/_2sdp"
                             android:text="@{item.f1111}"
-                            android:textAlignment="textEnd"
+                            android:textAlignment="center"
                             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                             android:textColor="@color/colorPrimaryLight"
                             android:textSize="21sp"
@@ -141,7 +141,7 @@
 
                             </LinearLayout>
 
-                            <TextView
+                            <!--<TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="  /  "
@@ -169,7 +169,7 @@
                                     android:textColor="@color/colorPrimaryDark"
                                     android:textSize="@dimen/_7sdp" />
 
-                            </LinearLayout>
+                            </LinearLayout>-->
                         </LinearLayout>
 
 
@@ -191,7 +191,7 @@
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
-                                android:layout_weight="1"
+                                android:layout_weight="2"
                                 android:paddingStart="@dimen/_2sdp"
                                 android:paddingEnd="@dimen/_1sdp"
                                 android:text="@{item.f1112}"
