--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -29,6 +30,25 @@
             app:popupTheme="@style/AppTheme.PopupOverlay"
             app:title="@string/app_name"
             app:titleTextColor="@color/colorPrimary" />
+
+        <TextView
+            android:id="@+id/newApp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
+            android:alpha="0.6"
+            android:background="@drawable/all_round_corners_stroke"
+            android:backgroundTint="#d6ffd600"
+            android:backgroundTintMode="src_in"
+            android:includeFontPadding="false"
+            android:padding="12dp"
+            android:text="Welcome, !"
+            android:textColor="@color/redDark"
+            android:textStyle="bold"
+            android:visibility="gone"
+            tools:visibility="visible" />
 
 
         <ImageView
