--- a/app/src/main/res/menu/item_menu.xml
+++ b/app/src/main/res/menu/item_menu.xml
@@ -16,6 +16,7 @@
                 android:title="@string/action_database" />
             <item
                 android:id="@+id/debugDB"
+                android:visible="false"
                 android:title="Open Debug Database"
                 app:showAsAction="collapseActionView" />
             <item
